--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="https://todddev-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
   
   <script>
-    $Lightning.use("colorContactUsOut", () => {
+    $Lightning.use("c:colorContactUsOut", () => {
       $Lightning.createComponent("c:colorContactUs", {}, "lightning", undefined)
-    })
+    }, 'https://todddev-dev-ed.lightning.force.com')
   </script>
 </html>
