--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body></body>
   
-  <script src="https://todddev-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
+  <script src="https://todddev-dev-ed.lightning.salesforce.com/lightning/lightning.out.js"></script>
   
   <script>
     $Lightning.use("c:colorContactUsOut", () => {
