--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="contactUs">
   </body>
   
-  <script src="https://todddev-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
+  <script src="https://todddevcomtest-developer-edition.um5.force.com/communitySandbox/lightning/lightning.out.js"></script>
   
   <script>
     $Lightning.use("c:colorContactUsOut", () => {
