--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://todddevcomtest-developer-edition.um5.force.com/communitySandbox/lightning/lightning.out.js"></script>
   
   <script>
-    $Lightning.use("c:colorContactUsOut", () => {
+    $Lightning.use("c:ColorContactUsOut", () => {
       $Lightning.createComponent("c:colorContactUs", {}, "contactUs", () => {console.log("Contact Us Created")})
     }, 'https://todddevcomtest-developer-edition.um5.force.com')
   </script>
