--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head></head>
 
 <body>
-  <div class="contactUs">
+  <div id="contactUs">
   </body>
   
   <script src="https://todddevcomtest-developer-edition.um5.force.com/communitySandbox/lightning/lightning.out.js"></script>
