--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-<head></head>
+<head>
+  <style>
+    body {font-family: mono-space;} 
+  </style>
+  </head>
 
 <body>
   <div id="contactUs">
