--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <head>
   <style>
-    body {font-family: mono-space;} 
+    .contactUsCmp {
+    width: 50%;}
   </style>
   </head>
 
 <body>
-  <div id="contactUs">
+  <div id="contactUs" class="contactUsCmp">
   </body>
   
   <script src="https://todddevcomtest-developer-edition.um5.force.com/communitySandbox/lightning/lightning.out.js"></script>
