--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <style>
     .contactUsCmp {
-    width: 50%;}
+    width: 50%;
+    margin: 0 auto;
+    border:solid 1px red;}
   </style>
   </head>
 
