--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <style>
     .contactUsCmp {
     width: 50%;
-    margin: 0 auto;
-    border:solid 1px red;}
+    margin: 0 auto !important;
+    }
   </style>
   </head>
 
