--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <html>
 <head>
   <style>
+    @import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');
+    
     .contactUsCmp {
     width: 60%;
     margin: 0 auto !important;
+    }
+    h3 {
+      font-family: 'Arvo', serif !important;
     }
   </style>
   </head>
