--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html>
 <head>
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Arvo|Noto+Sans&display=swap');
+    
+    #contactUs {
+      font-family: 'Noto Sans', sans-serif !important;}
     
     .contactUsCmp {
     width: 60%;
