--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="contactUs" class="contactUsCmp">
   </body>
   
-  <script src="https://todddevcomtest-developer-edition.um5.force.com/communitySandbox/lightning/lightning.out.js"></script>
+  <script src="https://colortest-developer-edition.eu10.force.com/lightning/lightning.out.js"></script>
   
   <script>
     $Lightning.use("c:ColorContactUsOut", function() {
@@ -33,6 +33,6 @@
                                  function(cmp) {console.log("Contact Us Created")}
                                 );
     }, 
-    'https://todddevcomtest-developer-edition.um5.force.com/communitySandbox')
+    'https://colortest-developer-edition.eu10.force.com')
   </script>
 </html>
